<resources>
    <string name="app_name">Turing Machines</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Máquinas de Turing</string>
    <string name="nav_header_subtitle">Rodrigo Ramírez 1156813</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_palindrome">Palindromos</string>
    <string name="menu_patters">Patrones</string>
    <string name="menu_addition">Suma Unaria</string>
    <string name="menu_substraction">Resta Unaria</string>
    <string name="menu_multiplication">Multiplicación Unaria</string>

    <string name="movements">Número de movimientos:</string>
    <string name="title">Proyecto 2: Máquinas de Turing</string>


</resources>
