<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_palindrome"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_palindrome" />
        <item
            android:id="@+id/nav_pattern"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_patters" />
        <item
            android:id="@+id/nav_addition"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_addition" />
        <item
            android:id="@+id/nav_substr"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_substraction" />

        <item
            android:id="@+id/nav_multi"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_multiplication" />
    </group>


</menu>
